openshift/base/run.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: posa-web
    uses-database: "true"
  name: posa-web
  annotations:
    image.openshift.io/triggers: |-
      [
        {
          "from": { "kind":"ImageStreamTag", "name": "posa:release" },
          "fieldPath": "spec.template.spec.containers[?(@.name==\"posa\")].image"
        }
      ]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posa-web
    name: posa-web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: posa-web
    spec:
      containers:
      - name: posa-web
        image: posa:release
        command:
          - bash
          - -c
          - bin/posa start
        resources:
          requests:
            cpu: 10m
            memory: 256Mi
          limits:
            cpu: 1
            memory: 2Gi
      restartPolicy: Always
      # volumes: []
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: posa-web
  name: posa-web
spec:
  ports:
  - name: 4000-tcp
    port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: posa-web
  type: ClusterIP
