openshift/base/ingress.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: posa
  name: posa
spec:
  port:
    targetPort: 4000-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: posa-web
# ---
# apiVersion: route.openshift.io/v1
# kind: Route
# metadata:
#   annotations:
#     kubernetes.io/tls-acme: "true"
#   labels:
#     app: posa-external
#   name: posa-external
# spec:
#   port:
#     targetPort: 4000-tcp
#   tls:
#     insecureEdgeTerminationPolicy: Redirect
#     termination: edge
#   to:
#     kind: Service
#     name: posa
